# FON_cpp

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md
UI/: CMakeLists.txt  leftWidget.cpp  loginDialog.cpp  main.cpp  mainwindow.cpp
UI/include/: leftWidget.h  mainwindow.h
src/: CMakeLists.txt  main.cpp
src/UI/: CMakeLists.txt  cameraThead.cpp  cameraWorker.cpp  leftWidget.cpp  loginDialog.cpp  mainwindow.cpp
src/UI/include/: cameraThead.h  cameraWorker.h  leftWidget.h  loginDialog.h  mainwindow.h  util.h
src/algorithm/: CMakeLists.txt  CameraCapture.cpp  FocusAnalyzer.cpp  FocusScorer.cpp
src/algorithm/include/: CameraCapture.h  FocusAnalyzer.h  FocusScorer.h
